--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3676,10 +3676,10 @@ a {
 .js-floors .apt .aptplan .plan,
 .js-floors .loft .aptplan .plan {
   position: absolute;
-  top: 0%;
-  left: -45%;
-  width: 160%;
-  height: 60%;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   pointer-events: none;
   -webkit-transition: opacity 500ms;
   -o-transition: opacity 500ms;
