--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3677,12 +3677,8 @@ a {
 .js-floors .loft .aptplan .plan {
   position: absolute;
   top: 0%;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-      -ms-transform: translateX(-50%);
-          transform: translateX(-50%);
-  width: 200%;
-  max-width: 100vw;
+  left: 0%;
+  width: 160%;
   height: 60%;
   pointer-events: none;
   -webkit-transition: opacity 500ms;
@@ -3697,9 +3693,6 @@ a {
     left: 0;
     width: 100%;
     height: 100%;
-    -webkit-transform: none;
-        -ms-transform: none;
-            transform: none;
   }
 }
 .js-floors .apt .aptplan .plan.active,
@@ -3742,7 +3735,7 @@ a {
   .js-floors .apt .aptplan .plan[data-label]::before,
   .js-floors .loft .aptplan .plan[data-label]::before {
     padding-left: 0;
-    padding-right: 0;image.pngimage.png
+    padding-right: 0;
   }
 }
 @media (min-width: 1200px) {
@@ -5208,22 +5201,6 @@ a {
 
   .js-floors .apt .aptplan .plan{
     height: auto!important;
-    left: auto!important;
-    right: auto!important;
-    margin-left: auto!important;
-    margin-right: auto!important;
-    width: 200%!important;
-    max-width: calc(100vw - 30px);
-    -webkit-transform: none!important;
-        -ms-transform: none!important;
-            transform: none!important;
-    display: block!important;
-  }
-  
-  .js-floors .apt .aptplan .plan img{
-    margin-left: auto!important;
-    margin-right: auto!important;
-    display: block!important;
   }
 
   .aptplan.active .flat-reserve{
