--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2654,7 +2654,7 @@ ol {
 
 @media (min-width: 992px) {
   .text-lg-right {
-    text-align: left;
+    text-align: right;
   }
 }
 
@@ -2793,7 +2793,7 @@ body {
 }
 
 p {
-  text-align: left;
+  text-align: justify;
 }
 
 p:not(:last-child) {
@@ -2930,7 +2930,7 @@ a {
 }
 .js-mobmenu-content .js-mobmenu-menu ul a {
   text-decoration: none;
-  text-transform: capitalize;
+  text-transform: uppercase;
 }
 .js-mobmenu-content .js-mobmenu-lang ul {
   list-style: none;
@@ -2944,7 +2944,7 @@ a {
 }
 .js-mobmenu-content .js-mobmenu-lang ul a {
   text-decoration: none;
-  text-transform: capitalize;
+  text-transform: uppercase;
 }
 
 .js-header {
@@ -2971,7 +2971,7 @@ a {
 }
 .js-header-menu, .js-header-lang {
   font-size: 0.625rem;
-  text-transform: capitalize;
+  text-transform: uppercase;
   letter-spacing: -0.03em;
 }
 .js-header-menu ul, .js-header-lang ul {
@@ -3072,7 +3072,7 @@ a {
   text-decoration: none;
 }
 .js-footer-menu > li > a {
-  font-size: 0.65rem;
+  font-size: 0.6666666667rem;
   font-weight: 700;
   text-transform: uppercase;
 }
@@ -3121,10 +3121,10 @@ a {
 }
 @media (min-width: 1200px) {
   .js-floors {
-    aspect-ratio: 1440/791;
+    aspect-ratio: 1440/790;
   }
   .js-floors.has-second-floor {
-    aspect-ratio: 1440/791;
+    aspect-ratio: 1440/1580;
   }
 }
 .js-floors .slide {
@@ -3397,13 +3397,10 @@ a {
   }
 }
 .js-floors .afloors .legend .sold,
-.js-floors .afloors .legend .on-request,
 .js-floors .afloors .legend .available,
 .js-floors .lfloors .legend .sold,
-.js-floors .lfloors .legend .on-request,
 .js-floors .lfloors .legend .available,
 .js-floors .apt .legend .sold,
-.js-floors .apt .legend .on-request,
 .js-floors .apt .legend .available,
 .js-floors .loft .legend .sold,
 .js-floors .loft .legend .available {
@@ -3411,30 +3408,22 @@ a {
   font-size: 0.5833333333rem;
 }
 .js-floors .afloors .legend .sold:not(:last-child),
-.js-floors .afloors .legend .on-request:not(:last-child),
 .js-floors .afloors .legend .available:not(:last-child),
 .js-floors .lfloors .legend .sold:not(:last-child),
-.js-floors .lfloors .legend .on-request:not(:last-child),
 .js-floors .lfloors .legend .available:not(:last-child),
 .js-floors .apt .legend .sold:not(:last-child),
-.js-floors .apt .legend .on-request:not(:last-child),
 .js-floors .apt .legend .available:not(:last-child),
 .js-floors .loft .legend .sold:not(:last-child),
-.js-floors .loft .legend .on-request:not(:last-child),
 .js-floors .loft .legend .available:not(:last-child) {
   margin-right: 2em;
 }
 .js-floors .afloors .legend .sold::before,
-.js-floors .afloors .legend .on-request::before,
 .js-floors .afloors .legend .available::before,
 .js-floors .lfloors .legend .sold::before,
-.js-floors .lfloors .legend .on-request::before,
 .js-floors .lfloors .legend .available::before,
 .js-floors .apt .legend .sold::before,
-.js-floors .apt .legend .on-request::before,
 .js-floors .apt .legend .available::before,
 .js-floors .loft .legend .sold::before,
-.js-floors .loft .legend .on-request::before,
 .js-floors .loft .legend .available::before {
   content: "";
   display: inline-block;
@@ -3456,12 +3445,6 @@ a {
 .js-floors .lfloors .legend .sold::before,
 .js-floors .apt .legend .sold::before,
 .js-floors .loft .legend .sold::before {
-  background-color: #9d7a7a;
-}
-.js-floors .afloors .legend .on-request::before,
-.js-floors .lfloors .legend .on-request::before,
-.js-floors .apt .legend .on-request::before,
-.js-floors .loft .legend .on-request::before {
   background-color: #979797;
 }
 .js-floors .afloors .floorplan,
@@ -3626,6 +3609,53 @@ a {
             transform: scale(1.4);
   }
 }
+.js-floors .afloors .floorplan.l3,
+.js-floors .lfloors .floorplan.l3,
+.js-floors .apt .floorplan.l3,
+.js-floors .loft .floorplan.l3 {
+  -webkit-transform: scale(0.9);
+      -ms-transform: scale(0.9);
+          transform: scale(0.9);
+}
+@media (min-width: 768px) {
+  .js-floors .afloors .floorplan.l3,
+  .js-floors .lfloors .floorplan.l3,
+  .js-floors .apt .floorplan.l3,
+  .js-floors .loft .floorplan.l3 {
+    -webkit-transform-origin: top right;
+        -ms-transform-origin: top right;
+            transform-origin: top right;
+    -webkit-transform: scale(2.5);
+        -ms-transform: scale(2.5);
+            transform: scale(2.5);
+  }
+}
+@media (min-width: 992px) {
+  .js-floors .afloors .floorplan.l3,
+  .js-floors .lfloors .floorplan.l3,
+  .js-floors .apt .floorplan.l3,
+  .js-floors .loft .floorplan.l3 {
+    -webkit-transform-origin: 100% 50%;
+        -ms-transform-origin: 100% 50%;
+            transform-origin: 100% 50%;
+    -webkit-transform: scale(1.3);
+        -ms-transform: scale(1.3);
+            transform: scale(1.3);
+  }
+}
+@media (min-width: 1600px) {
+  .js-floors .afloors .floorplan.l3,
+  .js-floors .lfloors .floorplan.l3,
+  .js-floors .apt .floorplan.l3,
+  .js-floors .loft .floorplan.l3 {
+    -webkit-transform-origin: 100% 40%;
+        -ms-transform-origin: 100% 40%;
+            transform-origin: 100% 40%;
+    -webkit-transform: scale(1.4);
+        -ms-transform: scale(1.4);
+            transform: scale(1.4);
+  }
+}
 .js-floors .apt .content,
 .js-floors .loft .content {
   padding: 0;
@@ -3677,7 +3707,7 @@ a {
 .js-floors .loft .aptplan .plan {
   position: absolute;
   top: 0%;
-  left: 0%;
+  left: -45%;
   width: 160%;
   height: 60%;
   pointer-events: none;
@@ -3901,7 +3931,7 @@ a {
 .js-floors .loft .aptplan .plan {
   position: absolute;
   top: 0%;
-  left: 0%;
+  left: -45%;
   width: 160%;
   height: 60%;
   -o-object-fit: contain;
@@ -4942,7 +4972,7 @@ a {
   margin-top: 3em;
 }
 
-.js-contactform , .js-reserveform{
+.js-contactform {
   background-color: #A8692C;
   color: #FFFFFF;
   border-radius: 0.625rem;
@@ -4951,43 +4981,12 @@ a {
   margin: auto;
   padding: 2.0833333333rem;
 }
-
-.js-reserveform input[type="radio"] {
-    background-color: initial;
-    cursor: default;
-    appearance: auto;
-    box-sizing: border-box;
-    margin: 3px 3px 0px 5px;
-    padding: 2.0833333333rem;
-    border: initial;
-}
-
-.js-reserveform .citadele {
-    border-style: none;
-    height: 40px;
-}
-
-.js-reserveform .swedbank, .seb, .luminor, .revolut {
-    border-style: none;
-    height: 40px;
-}
-
-.js-reserveform .seb, .luminor, .revolut {
-    border-style: none;
-    height: 25px;
-}
-
-.js-reserveform .revolut {
-    border-style: none;
-    height: 20px;
-}
-
 @media (min-width: 768px) {
   .js-contactform {
     padding: 3.6666666667rem 4.1666666667rem 2.7083333333rem 4.1666666667rem;
   }
 }
-.js-contactform .element , .js-reserveform .element {
+.js-contactform .element {
   width: 100%;
   margin-bottom: 2.1666666667rem;
 }
@@ -4995,23 +4994,18 @@ a {
   font-size: 0.75em;
   margin-top: 2em;
 }
-.js-contactform .message.error, .js-reserveform .message.error {
+.js-contactform .message.error {
   color: #D02020;
   font-weight: bold;
 }
 .js-contactform input,
 .js-contactform textarea,
-.js-contactform button,
-.js-reserveform input,
-.js-reserveform textarea,
-.js-reserveform button {
+.js-contactform button {
   border: 1px solid currentColor;
   border-radius: 0.3333333333rem;
 }
-.js-contactform input:not([type=radio]) input:not([type='checkbox']), 
-.js-reserveform input:not([type=radio]) input:not([type='checkbox']),
-.js-contactform textarea,
-.js-reserveform textarea {
+.js-contactform input,
+.js-contactform textarea {
   display: block;
   width: 100%;
   -webkit-appearance: none;
@@ -5020,71 +5014,59 @@ a {
   font-size: 0.6666666667rem;
   outline: none;
 }
-.js-contactform input::-webkit-input-placeholder, .js-contactform textarea::-webkit-input-placeholder,
-.js-reserveform input::-webkit-input-placeholder, .js-reserveform textarea::-webkit-input-placeholder {
+.js-contactform input::-webkit-input-placeholder, .js-contactform textarea::-webkit-input-placeholder {
   color: currentColor;
   -webkit-transition: opacity 250ms;
   transition: opacity 250ms;
 }
-.js-contactform input::-moz-placeholder, .js-contactform textarea::-moz-placeholder,
-.js-reserveform input::-moz-placeholder, .js-reserveform textarea::-moz-placeholder {
+.js-contactform input::-moz-placeholder, .js-contactform textarea::-moz-placeholder {
   color: currentColor;
   -moz-transition: opacity 250ms;
   transition: opacity 250ms;
 }
-.js-contactform input:-ms-input-placeholder, .js-contactform textarea:-ms-input-placeholder,
-.js-reserveform input:-ms-input-placeholder, .js-reserveform textarea:-ms-input-placeholder {
+.js-contactform input:-ms-input-placeholder, .js-contactform textarea:-ms-input-placeholder {
   color: currentColor;
   -ms-transition: opacity 250ms;
   transition: opacity 250ms;
 }
-.js-contactform input::-ms-input-placeholder, .js-contactform textarea::-ms-input-placeholder,
-.js-reserveform input::-ms-input-placeholder, .js-reserveform textarea::-ms-input-placeholder {
+.js-contactform input::-ms-input-placeholder, .js-contactform textarea::-ms-input-placeholder {
   color: currentColor;
   -ms-transition: opacity 250ms;
   transition: opacity 250ms;
 }
 .js-contactform input::placeholder,
-.js-reserveform input::placeholder,
-.js-contactform textarea::placeholder,
-.js-reserveform textarea::placeholder {
+.js-contactform textarea::placeholder {
   color: currentColor;
   -webkit-transition: opacity 250ms;
   -o-transition: opacity 250ms;
   transition: opacity 250ms;
 }
-.js-contactform input:focus::-webkit-input-placeholder, .js-contactform textarea:focus::-webkit-input-placeholder,
-.js-reserveform input:focus::-webkit-input-placeholder, .js-reserveform textarea:focus::-webkit-input-placeholder {
+.js-contactform input:focus::-webkit-input-placeholder, .js-contactform textarea:focus::-webkit-input-placeholder {
   color: rgba(255, 255, 255, 0.5);
 }
-.js-contactform input:focus::-moz-placeholder, .js-contactform textarea:focus::-moz-placeholder,
-.js-reserveform input:focus::-moz-placeholder, .js-reserveform textarea:focus::-moz-placeholder {
+.js-contactform input:focus::-moz-placeholder, .js-contactform textarea:focus::-moz-placeholder {
   color: rgba(255, 255, 255, 0.5);
 }
-.js-contactform input:focus:-ms-input-placeholder, .js-contactform textarea:focus:-ms-input-placeholder,
-.js-reserveform input:focus:-ms-input-placeholder, .js-reserveform textarea:focus:-ms-input-placeholder  {
+.js-contactform input:focus:-ms-input-placeholder, .js-contactform textarea:focus:-ms-input-placeholder {
   color: rgba(255, 255, 255, 0.5);
 }
-.js-contactform input:focus::-ms-input-placeholder, .js-contactform textarea:focus::-ms-input-placeholder,
-.js-reserveform input:focus::-ms-input-placeholder, .js-reserveform textarea:focus::-ms-input-placeholder {
+.js-contactform input:focus::-ms-input-placeholder, .js-contactform textarea:focus::-ms-input-placeholder {
   color: rgba(255, 255, 255, 0.5);
 }
 .js-contactform input:focus::placeholder,
 .js-contactform textarea:focus::placeholder {
   color: rgba(255, 255, 255, 0.5);
 }
-.js-contactform input , .js-reserveform input{
+.js-contactform input {
   padding: 0.5833333333rem 0.6666666667rem;
   line-height: 1;
 }
-.js-contactform textarea,
-.js-reserveform textarea {
+.js-contactform textarea {
   padding: 0.7916666667rem 0.6666666667rem;
   resize: none;
   height: 3.5416666667rem;
 }
-.js-contactform button,
-.js-reserveform button {
+.js-contactform button {
   text-transform: uppercase;
   font-size: 0.75rem;
   padding: 0.5rem 1.3333333333rem;
@@ -5093,8 +5075,7 @@ a {
   -o-transition: color 250ms, background-color 250ms, border-color 250ms;
   transition: color 250ms, background-color 250ms, border-color 250ms;
 }
-.js-contactform button:hover,
-.js-reserveform button:hover {
+.js-contactform button:hover {
   background-color: #FFFFFF;
   border-color: #FFFFFF;
   color: #A8692C;
@@ -5174,101 +5155,8 @@ a {
   text-decoration: underline;
 }
 
-.js-location-tabs-list-new{
-	margin-top: 4.666667rem;
-	list-style: none;
-	padding-left: 7.9583333333rem;
-	margin-bottom: 2.666667rem;
-}
-
-.js-floors .floorplan .apt.reserved .bg {
-    fill: #9d7a7a;
-    cursor: pointer;
-    pointer-events: none; 
-}
-
-
 @media (max-width: 400px) {
   html[lang=ru] .js-flats-table.js-flats-table.js-flats-table thead {
     font-size: 0.45rem;
   }
 }
-
-@media (max-width: 1200px){
-  .aptplan.active .plan, .aptplan.active .plan img, .aptplan.active .aptinfo, .aptplan.active .flat-reserve{
-    position: relative!important;
-  }
-
-  .js-floors .apt .aptplan .plan{
-    height: auto!important;
-  }
-
-  .aptplan.active .flat-reserve{
-    margin-left: 0!important;
-  }
-
-  .aptplan.active .aptinfo{
-    position: relative!important;
-    left: 0;
-    margin-top: 30px;
-  }
-
-  .aptplan.active .aptinfo{
-    width: calc(100% - 30px);
-  }
-
-  .js-floors .apt .aptinfo table td{
-    text-align: left;
-  }
-
-  .js-floors .apt .aptinfo table td.text-end{
-    min-width: 50px;
-  }
-}
-
-
-.aptplan {
-  position: relative;
-  max-width: 100%;
-  text-align: center;
-}
-
-.aptplan picture.plan {
-  display: block;
-  position: relative;
-  width: 100%;
-  max-width: 100%;
-}
-
-.aptplan picture.plan img {
-  display: block;
-  width: auto;             /* keeps original aspect ratio */
-  max-width: 100%;         /* ensures image doesn’t overflow */
-  height: auto;            /* prevents vertical stretching */
-  margin: 0 auto;          /* centers image horizontally */
-  object-fit: contain;     /* fits inside container cleanly */
-}
-
-/* FIX: Floorplan should never overflow / zoom */
-.js-floors .afloors .floorplan,
-.js-floors .lfloors .floorplan,
-.js-floors .apt .floorplan,
-.js-floors .loft .floorplan {
-  transform: none !important;
-  transform-origin: center center !important;
-  max-width: 100% !important;
-  height: auto !important;
-}
-
-/* If inline SVG is used */
-.js-floors .afloors .floorplan svg,
-.js-floors .lfloors .floorplan svg,
-.js-floors .apt .floorplan svg,
-.js-floors .loft .floorplan svg {
-  width: 100% !important;
-  height: auto !important;
-  display: block;
-}
-
-html, body { overflow-x: hidden; }
-
