--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -734,6 +734,21 @@ a {
                     transform: scale(1.4);
                 }
             }
+            &.l3 {
+                transform: scale(0.9);
+                @include md {
+                    transform-origin: top right;
+                    transform: scale(2.5);
+                }
+                @include lg {
+                    transform-origin: 100% 50%;
+                    transform: scale(1.3);
+                }
+                @include xxl {
+                    transform-origin: 100% 40%;
+                    transform: scale(1.4);
+                }
+            }
         }
 
     }
